# Client_Server

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
lib/: serialization.lib
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.cpp  server.cpp
